fix: 添加异常处理与日志诊断以排查 ATM10 中数据库打不开问题
- DatabaseAccessItem.use() / ModNetwork.handleOpenEquippedDatabase：添加 try-catch，异常时记录日志并提示玩家
- PersonalDatabaseService.open()：添加 try-catch，检查 openMenu 结果，失败时提示玩家
- PersonalDatabaseServiceMigrationHelper：迁移异常不再阻塞菜单打开
- PersonalDatabaseMenuSupport：反射获取 Slot.x/y 失败时降级为 null，避免类加载崩溃
- 新增本地化消息 message.infiniteinventory.database.open_failed（中/英）

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>